<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/account_ui_bg"
    tools:context=".account_ui.Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/welcome_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>
            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_full_name"
                android:inputType="textCapWords"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"/>
            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"/>
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"/>

            <EditText
                android:id="@+id/consultant_category"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_your_category"
                android:inputType="textCapWords"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/login_register_bg"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">


                <TextView
                    android:id="@+id/login_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/light_gray"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/or"/>



            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>