<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/account_ui_bg"
    tools:context=".account_ui.Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/login_illustration"
                android:layout_width="246dp"
                android:layout_height="183dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/login_illustration"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/welcome_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/login_register_bg"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/light_gray"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/forgot_password"/>

                <TextView
                    android:id="@+id/signup_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="@color/light_gray"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/or"/>



            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>