<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/account_ui_bg"
    tools:context=".account_ui.Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/login_illustration"
                android:layout_width="246dp"
                android:layout_height="183dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/login_illustration"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/welcome_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lets_get_started"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/patient_btn_link"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/white_bg"
                android:text="@string/i_am_a_patient"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>


            <Button
                android:id="@+id/consultant_btn_link"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/login_register_bg"
                android:text="@string/i_am_a_consultant"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">

                <TextView
                    android:id="@+id/have_an_account_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/light_gray"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>